# degasolv

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP  ROADMAP.md  TODO  Vagrantfile  apt-depends-strings  bisect.sh  bootw  build  build-native-image  build.boot  build.boot.disabled  example-degasolv.edn  example-degasolvconfig.edn  example-dependable.edn  foo  generate-test-data  git.md  grill  make-reflection  notes  package  project-config.edn  project.clj  run-test-data  sample.json  url-as-dependency.md
.circleci/: config.yml
artifactory-plugin/: degasolv.groovy  run  setup
buildutils/: coverage.awk  generate-manifest  graal  package  test-install-package-centos  test-install-package-ubuntu
cli-src/degasolv/: cli.clj
doc/: intro.md  reference.md  tutorial.md
docs/: 3rd-party-licenses.rst  Makefile  architecture.rst  authors.rst  changelog.rst  code-of-conduct.rst  command-reference.rst  conf.py  contributing.rst  debugging.rst  get-degasolv.rst  index.rst  introduction.rst  longer-example.rst  make.bat  quickstart.rst  recipes.rst  resolving-problems.rst  roadmap.rst  set-up-guide.rst  why-degasolv.rst
old-doc/: README.md  cli_tutorial.md  recipes.md  tutorial.md
presentation/: build  degasolv-2017.tex
presentation/demo/: lighttpd.conf  script  script.md
presentation/demo/libshiny/: CMakeLists.txt  build-shiny  degasolv.edn
presentation/demo/libshiny/include/: shiny.h
presentation/demo/libshiny/src/: shiny.c
scripts/: degasolv
test-scripts/: grill  test-apt
(+115 files in other folders)
